--- a/app/user/templates/signup.html
+++ b/app/user/templates/signup.html
@@ -9,6 +9,7 @@
     {{ render_field(form.surname) }}
     {{ render_field(form.password) }}
     {{ render_field(form.confirm) }}
+    {{ render_field(form.mail) }}
     {{ form.recaptcha }}
     {{ render_field(form.submit) }}
     {{ form.hidden_tag() }}
