--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,11 @@
 {% extends "bootstrap/base.html" %}
+
+{% block styles %}
+{{super()}}
+<link rel="stylesheet"
+      href="{{url_for('static', filename='main.css')}}">
+
+{% endblock %}
 {% block navbar %}
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
