Add group model and manager commands.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,21 @@
 {% block title %}Index{% endblock %}
 
 {% block content %}
-  {% if current_user.is_authenticated %}
-  {% endif %}
+  <div class="container">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        You are member in the following groups:
+      </div>
+      {% if current_user.is_authenticated %}
+        <ul class="list-group">
+        {% for group in current_user.groups %}
+          <li class="list-group-item">
+            <h4 class="list-group-item-heading">{{ group.group_name }}</h4>
+            <p class="list-group-item-text">{{ group.description }}</p>
+          </li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    </div>
+  </div>
 {% endblock %}
