--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="{{url_for('user.home')}}">
         <span class="glyphicon glyphicon-lock" aria-hidden="true"></span> ZaPF-Auth
       </a>
     </div>
