--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{{url_for('oauth2.clients')}}">OAuth2 Applications</a></li>
+            <li><a href="{{url_for('registration.unis')}}">Unis</a></li>
           </ul>
         </li>
       {% endif %}
