--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,7 @@
           <ul class="dropdown-menu">
             <li><a href="{{url_for('oauth2.clients')}}">OAuth2 Applications</a></li>
             <li><a href="{{url_for('registration.unis')}}">Unis</a></li>
+            <li><a href="{{url_for('registration.registrations')}}">Registration</a></li>
           </ul>
         </li>
       {% endif %}
