--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,5 @@
 {% extends "bootstrap/base.html" %}
+{% import "bootstrap/utils.html" as utils %}
 
 {% block styles %}
 {{super()}}
@@ -51,4 +52,5 @@
     </div>
   </div>
 </nav>
+{{utils.flashed_messages(container=True)}}
 {% endblock %}
