--- a/app/user/templates/index.html
+++ b/app/user/templates/index.html
@@ -1,10 +1,23 @@
 {% extends "base.html" %}
 
-{% block title %}user blueprint index - you probably want to override this.{% endblock %}
+{% block title %}Index{% endblock %}
 
 {% block content %}
-  {% if current_user.is_authenticated %}
-    <h1>Welcome: {{ current_user.full_name }}</h1>
-    <h2>{{ current_user.dn }}</h2>
-  {% endif %}
+  <div class="container">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        You are member in the following groups:
+      </div>
+      {% if current_user.is_authenticated %}
+        <ul class="list-group">
+        {% for group in current_user.groups %}
+          <li class="list-group-item">
+            <h4 class="list-group-item-heading">{{ group.group_name }}</h4>
+            <p class="list-group-item-text">{{ group.description }}</p>
+          </li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    </div>
+  </div>
 {% endblock %}
