--- a/app/user/templates/login.html
+++ b/app/user/templates/login.html
@@ -1,12 +1,23 @@
 {% extends "base.html" %}
-{% from "_formhelpers.html" import render_field %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block styles %}
+{{super()}}
+<link rel="stylesheet"
+      href="{{url_for('static', filename='signin.css')}}">
+{% endblock %}
 
 {% block title %}login{% endblock %}
 {% block content %}
-  <form method="POST">
-    {{ render_field(form.username) }}
-    {{ render_field(form.password) }}
-    {{ render_field(form.submit) }}
-    {{ form.hidden_tag() }}
-  </form>
+  <div class="container">
+    <form class="form-signin" method="POST">
+      <h2 class="form-signin-heading">Please sign in</h2>
+      {{ wtf.form_errors(form, hiddens="only") }}
+      {{ form.username(class='form-control', placeholder='Username')|safe }}
+      {{ form.password(class='form-control', placeholder='Password')|safe }}
+      <p>Don't have an account? <a href="{{url_for('user.signup')}}">Sign up!</a></p>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      {{ form.hidden_tag() }}
+    </form>
+  </div>
 {% endblock %}
