--- a/app/user/templates/signup.html
+++ b/app/user/templates/signup.html
@@ -1,17 +1,30 @@
 {% extends "base.html" %}
-{% from "_formhelpers.html" import render_field %}
+{% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}register{% endblock %}
+{% block styles %}
+{{super()}}
+<link rel="stylesheet"
+      href="{{url_for('static', filename='signin.css')}}">
+{% endblock %}
+
+{% block title %}Sign Up{% endblock %}
 {% block content %}
-  <form method="POST">
-    {{ render_field(form.username) }}
-    {{ render_field(form.givenName) }}
-    {{ render_field(form.surname) }}
-    {{ render_field(form.password) }}
-    {{ render_field(form.confirm) }}
-    {{ render_field(form.mail) }}
-    {{ form.recaptcha }}
-    {{ render_field(form.submit) }}
-    {{ form.hidden_tag() }}
-  </form>
+  <div class="container">
+    <form class="form-signup" method="POST">
+      <h2 class="form-signup-heading">Create your account</h2>
+      {{ form.username(class='form-control', placeholder='Username')|safe }}
+      <div class="input-group">
+        {{ form.givenName(class='form-control', placeholder='Given name')|safe }}
+        {{ form.surname(class='form-control', placeholder='Surname')|safe }}
+      </div>
+      {{ form.mail(class='form-control', placeholder='Email')|safe }}
+      {{ form.password(class='form-control', placeholder='Password')|safe }}
+      {{ form.confirm(class='form-control', placeholder='Repeat Password')|safe }}
+      {{ wtf.form_errors(form) }}
+      {{ form.recaptcha }}
+      <p>Already have an account? <a href="{{url_for('user.login')}}">Sign in!</a></p>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up!</button>
+      {{ form.hidden_tag() }}
+    </form>
+  </div>
 {% endblock %}
