--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a href="{{url_for('user.list_users')}}">Users</a></li>
             <li><a href="{{url_for('oauth2.clients')}}">OAuth2 Applications</a></li>
           </ul>
         </li>
@@ -46,6 +47,7 @@
 
       <ul class="nav navbar-nav navbar-right">
       {% if current_user.is_authenticated %}
+        <li><a href="{{url_for('user.edit_me')}}">Settings</a></li>
         <li><a href="{{url_for('user.logout')}}">logout</a></li>
       {% endif %}
       </ul>
