--- a/app/user/templates/login.html
+++ b/app/user/templates/login.html
@@ -13,8 +13,8 @@
     <form class="form-signin" method="POST">
       <h2 class="form-signin-heading">Please sign in</h2>
       {{ wtf.form_errors(form, hiddens="only") }}
-      {{ form.username(class='form-control', placeholder='Username')|safe }}
-      {{ form.password(class='form-control', placeholder='Password')|safe }}
+      {{ form.username(class='form-control', placeholder='Username') }}
+      {{ form.password(class='form-control', placeholder='Password') }}
       <p>Don't have an account? <a href="{{url_for('user.signup')}}">Sign up!</a></p>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       {{ form.hidden_tag() }}
