Fix confirmation page

--- a/app/templates/confirm.html
+++ b/app/templates/confirm.html
@@ -7,7 +7,7 @@
   <div class="container">
     <form class="form-confirmation" method="POST">
       <div class="jumbotron clearfix">
-        <h1 class="form-confirmation-heading">{{ data.prompt | default(data.title) }}?</h1>
+        <h1 class="form-confirmation-heading">{% if data.prompt %}{{ data.prompt }}{% else %}{{ data.title }}{% endif %}?</h1>
         {% if data.text %}<p>{{ data.text }}</p>{% endif %}
         {{ wtf.form_errors(form) }}
         {% if data.back %}
@@ -15,7 +15,7 @@
           <a class="btn btn-lg btn-default" href="{{ url_for(data.back) }}">
              <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Back
           </a>
-          {{ form.submit(class='btn btn-lg btn-primary btn-danger', value=data.action | default("Yes")) }}
+          {{ form.submit(class='btn btn-lg btn-primary btn-danger', value=data.action) }}
         </div>
         {% endif %}
         {{ form.hidden_tag() }}
