Add javascript form to list users

--- a/app/user/templates/admin/listUsers.html
+++ b/app/user/templates/admin/listUsers.html
@@ -2,9 +2,64 @@
 
 {% block title %}Users{% endblock %}
 
+{% block scripts %}
+{{ super() }}
+<script type="text/javascript">
+// Adapted from http://jsfiddle.net/ukW2C/3/
+$("#search").keyup(function () {
+      //split the current value of search
+      var data = this.value.split(" ");
+
+      //create a jquery object of the rows
+      var jo = $("#users").find("tr");
+      if (this.value == "") {
+                jo.show();
+                $("#search-group").removeClass("has-error");
+                $("#search-group").removeClass("has-success");
+                return;
+            }
+      //hide all the rows
+      jo.hide();
+
+      //Recusively filter the jquery object to get results.
+      filtered = jo.filter(function (i, v) {
+                var $t = $(this);
+                for (var d = 0; d < data.length; ++d) {
+                              if ($t.is(":contains('" + data[d] + "')")) {
+                                                return true;
+                                            }
+                          }
+                return false;
+            });
+      //show the rows that match.
+      filtered.show();
+
+      //update the search bar validation status
+      if (filtered.length) {
+        $("#search-group").addClass("has-success");
+        $("#search-group").removeClass("has-error");
+      } else {
+        $("#search-group").addClass("has-error");
+        $("#search-group").removeClass("has-success");
+      }
+}).focus(function () {
+      this.value = "";
+      $(this).unbind('focus');
+});
+</script>
+{% endblock %}
+
 {% block content %}
 <div class="container">
   <h1>Users</h1>
+
+  <div id="search-group" class="form-group has-feedback">
+    <label class="control-label sr-only" for="search">Search for users</label>
+    <div class="input-group">
+      <span class="input-group-addon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span>
+      <input id="search" type="text" class="form-control input-lg" placeholder="Search">
+    </div>
+  </div>
 
   <table class='table'>
     <tr>
@@ -13,23 +68,25 @@
       <th>E-Mail</th>
       <th>Actions</th>
     </tr>
-    {% for user in users %}
-    <tr>
-      <td>{{ user.username }}</td>
-      <td>{{ user.full_name }}</td>
-      <td>{{ user.mail }}</td>
-      <td>
-        <div class="btn-group" role="group">
-          <a class="btn-default btn" href="{{url_for('user.edit_user', username=user.username)}}">
-            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>&nbsp;Edit
-          </a>
-          <a class="btn-danger btn" href="{{url_for('user.delete_user', username=user.username)}}">
-            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>&nbsp;Delete
-          </a>
-        </div>
-      </td>
-    </tr>
+    <tbody id="users">
+      {% for user in users %}
+      <tr>
+        <td>{{ user.username }}</td>
+        <td>{{ user.full_name }}</td>
+        <td>{{ user.mail }}</td>
+        <td>
+          <div class="btn-group" role="group">
+            <a class="btn-default btn" href="{{url_for('user.edit_user', username=user.username)}}">
+              <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>&nbsp;Edit
+            </a>
+            <a class="btn-danger btn" href="{{url_for('user.delete_user', username=user.username)}}">
+              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>&nbsp;Delete
+            </a>
+          </div>
+        </td>
+      </tr>
     {% endfor %}
+    </tbody>
   </table>
 </div>
 {% endblock %}
