Groups: Implement administrative join/leave views

--- a/app/user/templates/admin/profile.html
+++ b/app/user/templates/admin/profile.html
@@ -27,11 +27,30 @@
     </div>
 
     <div class="panel panel-default">
-      <div class="panel-heading"><h2>Groups</h2></div>
+      <div class="panel-heading">
+        <h2 class="clearfix">
+          Groups
+          <div class="btn-group pull-right">
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Join group <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+              {% for group in groups %}
+              <li><a href="{{ url_for('user.join', username=user.username, group_name=group.group_name) }}">{{ group.group_name }}</a></li>
+              {% endfor %}
+            </ul>
+          </div>
+        </h2>
+      </div>
         <ul class="list-group">
         {% for group in user.groups %}
           <li class="list-group-item">
-            <h4 class="list-group-item-heading">{{ group.group_name }}</h4>
+            <h4 class="list-group-item-heading clearfix">{{ group.group_name }}
+              <a class="btn btn-default pull-right"
+                 href="{{ url_for('user.leave', username=user.username, group_name=group.group_name) }}">
+                <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+              Leave</a>
+            </h4>
             <p class="list-group-item-text">{{ group.description }}</p>
           </li>
         {% endfor %}
