--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
 {% block styles %}
 {{super()}}
 <link rel="stylesheet"
-      href="{{url_for('static', filename='main.css')}}">
+      href="{{url_for('static', filename='css/main.css')}}">
 
 {% endblock %}
 {% block navbar %}
