--- a/app/user/templates/signup.html
+++ b/app/user/templates/signup.html
@@ -4,7 +4,7 @@
 {% block styles %}
 {{super()}}
 <link rel="stylesheet"
-      href="{{url_for('static', filename='signin.css')}}">
+      href="{{url_for('static', filename='css/signin.css')}}">
 {% endblock %}
 
 {% block title %}Sign Up{% endblock %}
