Groups: group list

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{{url_for('user.list_users')}}">Users</a></li>
+            <li><a href="{{url_for('user.list_groups')}}">Groups</a></li>
             <li><a href="{{url_for('oauth2.clients')}}">OAuth2 Applications</a></li>
           </ul>
         </li>
