--- a/app/static/signin.css
+++ b/app/static/signin.css
@@ -1,5 +1,4 @@
 body {
-  padding-top: 40px;
   padding-bottom: 40px;
   background-color: #222;
 }
@@ -9,7 +8,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .form-signin,
-.form-signup {
+.form-signup,
+.form-password-reset {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
@@ -18,6 +18,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .form-signin .form-signin-heading,
 .form-signup .form-signup-heading,
+.form-password-reset .form-password-reset-heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
 }
@@ -25,8 +26,9 @@ h1, h2, h3, h4, h5, h6 {
 .form-signin .checkbox {
   font-weight: normal;
 }
-.form-signup .form-control
-.form-signin .form-control {
+.form-signup .form-control,
+.form-signin .form-control,
+.form-password-reset .form-control {
   position: relative;
   height: auto;
   -webkit-box-sizing: border-box;
@@ -36,7 +38,8 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 16px;
 }
 .form-signup .form-control:focus,
-.form-signin .form-control:focus {
+.form-signin .form-control:focus, 
+.form-password-reset .form-control:focus {
   z-index: 5;
 }
 
