--- a/app/user/templates/login.html
+++ b/app/user/templates/login.html
@@ -16,6 +16,7 @@
       {{ form.username(class='form-control', placeholder='Username') }}
       {{ form.password(class='form-control', placeholder='Password') }}
       <p>Don't have an account? <a href="{{url_for('user.signup')}}">Sign up!</a></p>
+      <p>Don't know your password? <a href="{{url_for('user.reset_password_start')}}">Reset password!</a></p>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       {{ form.hidden_tag() }}
     </form>
