--- a/app/registration/templates/admin/wise17/reports.html
+++ b/app/registration/templates/admin/wise17/reports.html
@@ -45,5 +45,75 @@
       </a>
     </li>
   </ul>
+  <h3>
+    Maschinenlesbare Auswertungen für ZaPF Winter17:
+  </h3>
+  <ul>
+    <li>
+      gesamte Registrierung
+      <a href="{{ url_for('registration.registrations_export_json') }}">json</a>
+      <a href="{{ url_for('registration.registrations_export_csv') }}">csv</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registrations_export_openslides_csv') }}">openslides</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registrations_export_teilnehmer_csv') }}">Teilnehmer + Uni (csv)</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registrations_export_attendee_csv') }}">Teilnehmer mit Prioritäten usw.</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registrations_export_mails_txt') }}">Emails</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registrations_wise17_export_id_name_csv') }}">ID + Name</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registrations_wise17_export_wichteln_csv') }}">Wichteln (csv)</a>
+    </li>
+  </ul>
+  <h3>
+    LaTeX-Vorlagen für ZaPF Winter17:
+  </h3>
+  <ul>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_stimmkarten_latex') }}">Stimmkarten</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_idkarten_latex') }}">ID-Karten</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_tagungsausweise_latex') }}">Tagungsausweise</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_strichlisten_latex') }}">Strichlisten</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_bmbflisten_latex') }}">BMBF-Listen</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_taschentassenlisten_latex') }}">Taschentassen-Listen</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_ausweisidbeitraglisten_latex') }}">Ausweis-ID-Beitrag-Listen</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_t_shirt_latex') }}">Tshirt</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_exkursionen_latex') }}">Exkursionen</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_unis_latex') }}">Unis</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_unis_teilnehmer_latex') }}">Unis + Teilnehmer</a>
+    </li>
+    <li>
+      <a href="{{ url_for('registration.registration_wise17_export_bestaetigungen_latex') }}">Bestätigungen</a>
+    </li>
+
+  </ul>
 </div>
 {% endblock %}
