--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,6 +40,7 @@
           <ul class="dropdown-menu">
             <li><a href="{{url_for('registration.unis')}}">Unis</a></li>
             <li><a href="{{url_for('registration.registrations')}}">Registration</a></li>
+            <li><a href="{{url_for('registration.mascots')}}">Mascots</a></li>
             <li><a href="{{url_for('registration.registration_wise17_reports')}}">Reports WiSe17</a></li>
           </ul>
         </li>
