--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{url_for('user.home')}}">
-        <span class="glyphicon glyphicon-lock" aria-hidden="true"></span> ZaPF-Auth
+        <span class="glyphicon glyphicon-lock" aria-hidden="true"></span> {{config["BRANDING"]}}
       </a>
     </div>
 
